 * Don't exit on bad XML when using render_xhtml_field, fixing #3147
 * Added Microsoft Excel document format, fixing #3217
 * Using a pin with content twice will no longer repeat content, fixing #3027

2008-01-18 cjg
 * Multiple field tables now get a primary key, although this isn't created
    if you upgrade (yet).

2008-01-22 tdb
 * When finding the parts of a date/time allow splitting on 'T' and 'Z' (time)
 * Allow date/datetime search terms to include a time component
 * Modified oai interface to support seconds granularity, fixing #3227 in a
    different way

2008-01-23 tdb
 * Load the EPrints::Plugin module last to avoid dependency issues in
    dynamically loaded plugins
 * Added EPrints::CLIProcessor module for handling CLI messages
 * If the time part of the lastmod is null default to 00:00:00, fixing #3243

2008-01-25 tdb
 * Added URI::OpenURL module, to enable the openurl resolver by default

2008-02-01 tdb
 * Fixed typo in oai2 that prevented filters working, fixing #3250
 * Added Export::TextFile superclass to support BOMed outputs, modified EndNote
    export to export in UTF-8, modified RIS export to export in latin-1 (don't
    squash hi-byte chars), fixing #2934
 * Don't fill in autocompletion on tab, fixing #3247

2008-02-04 tdb
 * Re-enabled remote retrieval in XML::DOM's parsefile

2008-02-05 tdb
 * Added support for 'contributors' in DOI import
 * Added export plugin for OpenURL COinS, hidden ContextObject dependencies

2008-02-06 tdb
 * Removed debug log message in Platform::exec
 * Added EPrints namespace to <eprints> in XML export
 * Only match whole words as logical operators, fixing #3252
 * Added an "id" attribute to <select> fields, which means that they can be 
   	found with prototype $F() method -- fixing some issues with autocomplete.
 * Updated to scriptaculous 1.8.1
 * Work-around for autocompletion not working in Opera, fixing #3041

2008-02-07 tdb
 * Don't roll indexer logs on start/stop, only every 24 hours, fixing #2855
